syntax = "proto3";

package grpcapi;
option go_package = "pkg/grpcapi";

//import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

message Entity {
    string ID = 1;
    string Name = 2;
}

message GetReq {
    string ID = 1;    
}

service GRPCService {
    rpc GetEntity(GetReq) returns (Entity){
        option (google.api.http) = {
            get: "/v1/entity"
            body: ""
        };   
    };
    rpc AddEntity(Entity) returns (Entity){
        option (google.api.http) = {
            post: "/v1/entity"
            body: "*"
        };
    };
} 